hellow/deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
    labels:
        name: hellow
    name: hellow
    namespace: default
spec:
    replicas: 1
    template:
        metadata:
            labels:
                app: hellow
        spec:
            containers:
                -
                    name: hellow
                    image: 'hellow:v1'
