hellow/svc.yml
apiVersion: v1
kind: Service
metadata:
    name: hellow
    namespace: default
spec:
    ports:
        -
            port: 8082
            targetPort: 8081
    selector:
        app: hellow
